--- a/src/Shared/EditDataSetDialog.razor
+++ b/src/Shared/EditDataSetDialog.razor
@@ -11,18 +11,36 @@
             Saving dataset...
         </RadzenAlert>
     }
-    @if (Model is not null)
+    @if (WorkingCopy is not null)
     {
         <RadzenRow AlignItems="AlignItems.Center">
             <RadzenColumn Size="12" SizeMD="4">
                 <RadzenLabel Text="Name" title="Name" />
             </RadzenColumn>
             <RadzenColumn Size="12" SizeMD="8">
-                <RadzenTextBox Disabled=@IsSaving Style="width: 100%;" Name="Name" @bind-Value=@Model.DisplayName />
+                <RadzenTextBox Disabled=@IsSaving Style="width: 100%;" Name="Name" @bind-Value=@WorkingCopy.DisplayName />
             </RadzenColumn>
         </RadzenRow>
+        @if (WorkingCopy.Fields is not null)
+        {
+            foreach (var field in WorkingCopy.Fields)
+            {
+                <RadzenRow AlignItems="AlignItems.Center">
+                    <RadzenColumn Size="12" SizeMD="4">
+                        <RadzenTextBox Style="width: 100%;" @bind-Value=@field.Name />
+                    </RadzenColumn>
+                    <RadzenColumn Size="12" SizeMD="6">
+                        <RadzenTextBox Style="width: 100%;" @bind-Value=@field.Expression />
+                    </RadzenColumn>
+                    <RadzenColumn Size="12" SizeMD="2">
+                        <RadzenButton ButtonStyle=ButtonStyle.Light Click=@(()=>RemoveField(field)) Size="ButtonSize.Small" Text="Remove" />
+                    </RadzenColumn>
+                </RadzenRow>
+            }
+        }
         <RadzenRow Gap="2rem" Class="rz-p-0 rz-p-lg-4">
             <RadzenStack Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.Center" Gap="1rem" Class="rz-mt-8 rz-mb-4">
+                <RadzenButton ButtonStyle=ButtonStyle.Light Click=@NewField Size="ButtonSize.Large" Text="New Field" />
                 <RadzenButton Disabled=@IsSaving ButtonStyle="ButtonStyle.Primary" Click=@(async()=>await SaveAsync()) Size="ButtonSize.Large" Icon="save" Text="Save" />
                 <RadzenButton Disabled=@IsSaving ButtonStyle=ButtonStyle.Light Click=@Cancel Size="ButtonSize.Large" Text="Cancel" />
             </RadzenStack>
