--- a/src/Pages/Experiments/ExperimentsDashboard.razor
+++ b/src/Pages/Experiments/ExperimentsDashboard.razor
@@ -1,6 +1,10 @@
 ﻿@page "/projects/{ProjectId:guid}/experiments"
 @using ExperimentServer.Shared
 @using ExperimentServer.Models
+@if (projectModel is not null)
+{
+    <PageTitle>@projectModel.DisplayName experiments</PageTitle>
+}
 <RadzenStack>
     <RadzenRow>
         <RadzenStack Orientation="Orientation.Horizontal" Gap="0.5rem" AlignItems="AlignItems.Center" class="rz-p-4 rz-mb-6 rz-border-radius-1" Style="border: var(--rz-grid-cell-border); width:100%;">
@@ -13,7 +17,15 @@
             <HeaderTemplate>
                 <RadzenRow RowGap="0" Style="width:100%">
                     <RadzenText TextStyle="TextStyle.H6" Class="rz-display-flex rz-align-items-center rz-m-0">
-                        <RadzenIcon Icon="gavel" class="rz-mr-1" /><b>Experiments</b>
+                        <RadzenIcon Icon="gavel" class="rz-mr-1" />
+                        @if (projectModel is not null)
+                        {
+                            <b>@projectModel.DisplayName experiments</b>
+                        }
+                        else
+                        {
+                            <b>Experiments</b>
+                        }
                     </RadzenText>
                 </RadzenRow>
             </HeaderTemplate>
