delete experiment run

--- a/src/Pages/Experiments/ExperimentRunDashboard.razor
+++ b/src/Pages/Experiments/ExperimentRunDashboard.razor
@@ -5,6 +5,12 @@
 {
     <PageTitle>@experimentModel.Name runs</PageTitle>
 }
+@if (ErrorMessage is not null)
+{
+    <RadzenAlert AlertStyle="AlertStyle.Danger" Variant="Variant.Flat" Shade="Shade.Lighter">
+        @ErrorMessage
+    </RadzenAlert>
+}
 <RadzenStack>
     <RadzenRow>
         <RadzenStack Orientation="Orientation.Horizontal" Gap="0.5rem" AlignItems="AlignItems.Center" class="rz-p-4 rz-mb-6 rz-border-radius-1" Style="border: var(--rz-grid-cell-border); width:100%;">
@@ -36,6 +42,11 @@
                         <RadzenCheckBox @bind-Value="entry.IsSelected" />
                     </Template>
                 </RadzenDataGridColumn>
+                <RadzenDataGridColumn TItem="ExperimentRunModel" Title="Id" Width="20px">
+                    <Template Context="entry">
+                        @entry.Value!.Id
+                    </Template>
+                </RadzenDataGridColumn>
                 <RadzenDataGridColumn TItem="ExperimentRunModel" Title="Start" Width="20px">
                     <Template Context="entry">
                         @entry.Value!.Start
@@ -56,6 +67,7 @@
                 <RadzenDataGridColumn TItem="ExperimentRunModel" Title="" Width="50px">
                     <Template Context="entry">
                         <RadzenButton Click=@(args => View(entry.Value!)) Text="View" ButtonStyle="ButtonStyle.Primary" />
+                        <RadzenButton Click=@(args => DeleteAsync(entry.Value!)) Text="Delete" ButtonStyle="ButtonStyle.Danger" />
                     </Template>
                 </RadzenDataGridColumn>
             </Columns>
