--- a/src/Pages/Datasets/EditGroundTruthImage.razor
+++ b/src/Pages/Datasets/EditGroundTruthImage.razor
@@ -43,7 +43,7 @@
                 {
                     <div style="width:100%;height:500px; overflow:scroll;text-align:right;">
                         <RadzenImage Path=@Base64Image />
-                    </div>                    
+                    </div>
                 }
             </RadzenColumn>
             <RadzenColumn Size="12" SizeMD="4">
@@ -54,6 +54,23 @@
                         <RadzenText TextStyle="TextStyle.Subtitle2" TagName="TagName.H3">Upload image</RadzenText>
                         <InputFile Style="margin-top:5px;" OnChange="@InputFileChange" />
                     </RadzenCard>
+                    <RadzenButton Click="@AddTag" ButtonStyle=ButtonStyle.Light Size="ButtonSize.Small" Text="Add Tag" />
+                    @if (Model.Tags is not null)
+                    {
+                        foreach (var tag in Model.Tags)
+                        {
+                            <RadzenCard>
+                                <RadzenRow AlignItems="AlignItems.Center">
+                                    <RadzenColumn Size="12" SizeMD="6">
+                                        <RadzenTextBox Style="width: 100%;" @bind-Value=@tag.Name />
+                                    </RadzenColumn>
+                                    <RadzenColumn Size="12" SizeMD="6">
+                                        <RadzenTextBox Style="width: 100%;" @bind-Value=@tag.Value />
+                                    </RadzenColumn>
+                                </RadzenRow>
+                            </RadzenCard>
+                        }
+                    }
                 </RadzenStack>
             </RadzenColumn>
         </RadzenRow>
