establish which fields are suitable for direct comparisons

--- a/src/Shared/EditDataSetDialog.razor
+++ b/src/Shared/EditDataSetDialog.razor
@@ -23,16 +23,33 @@
         </RadzenRow>
         @if (WorkingCopy.Fields is not null)
         {
+            <RadzenRow AlignItems="AlignItems.Center">
+                <RadzenColumn Size="12" SizeMD="4">
+                    <span>Name</span>
+                </RadzenColumn>
+                <RadzenColumn Size="12" SizeMD="4">
+                    <span>Expression</span>
+                </RadzenColumn>
+                <RadzenColumn Size="12" SizeMD="2">
+                    <span>Is Subjective?</span>
+                </RadzenColumn>
+                <RadzenColumn Size="12" SizeMD="1">
+                    <RadzenButton ButtonStyle=ButtonStyle.Light Click=@NewField Size="ButtonSize.Small" Text="New Field" />
+                </RadzenColumn>
+            </RadzenRow>
             foreach (var field in WorkingCopy.Fields)
             {
                 <RadzenRow AlignItems="AlignItems.Center">
                     <RadzenColumn Size="12" SizeMD="4">
                         <RadzenTextBox Style="width: 100%;" @bind-Value=@field.Name />
                     </RadzenColumn>
-                    <RadzenColumn Size="12" SizeMD="6">
+                    <RadzenColumn Size="12" SizeMD="4">
                         <RadzenTextBox Style="width: 100%;" @bind-Value=@field.Expression />
                     </RadzenColumn>
                     <RadzenColumn Size="12" SizeMD="2">
+                        <RadzenCheckBox @bind-Value=@field.IsSubjective />
+                    </RadzenColumn>
+                    <RadzenColumn Size="12" SizeMD="1">
                         <RadzenButton ButtonStyle=ButtonStyle.Light Click=@(()=>RemoveField(field)) Size="ButtonSize.Small" Text="Remove" />
                     </RadzenColumn>
                 </RadzenRow>
@@ -40,7 +57,6 @@
         }
         <RadzenRow Gap="2rem" Class="rz-p-0 rz-p-lg-4">
             <RadzenStack Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.Center" Gap="1rem" Class="rz-mt-8 rz-mb-4">
-                <RadzenButton ButtonStyle=ButtonStyle.Light Click=@NewField Size="ButtonSize.Large" Text="New Field" />
                 <RadzenButton Disabled=@IsSaving ButtonStyle="ButtonStyle.Primary" Click=@(async()=>await SaveAsync()) Size="ButtonSize.Large" Icon="save" Text="Save" />
                 <RadzenButton Disabled=@IsSaving ButtonStyle=ButtonStyle.Light Click=@Cancel Size="ButtonSize.Large" Text="Cancel" />
             </RadzenStack>
