--- a/src/Pages/Datasets/DataSetDashboard.razor
+++ b/src/Pages/Datasets/DataSetDashboard.razor
@@ -9,8 +9,15 @@
 <RadzenStack>
     <RadzenRow>
         <RadzenStack Orientation="Orientation.Horizontal" Gap="0.5rem" AlignItems="AlignItems.Center" class="rz-p-4 rz-mb-6 rz-border-radius-1" Style="border: var(--rz-grid-cell-border); width:100%;">
-            <RadzenButton Click=@(args => AddNew()) Text="New" ButtonStyle="ButtonStyle.Primary" />
-            <RadzenButton Click=@(args => RefreshAsync()) Text="Refresh" ButtonStyle="ButtonStyle.Primary" />
+            <RadzenRow Style="width:100%">
+                <RadzenColumn SizeMD="11">
+                    <RadzenButton Click=@(args => AddNew()) Text="New" ButtonStyle="ButtonStyle.Primary" />
+                    <RadzenButton Click=@(args => RefreshAsync()) Text="Refresh" ButtonStyle="ButtonStyle.Primary" />
+                </RadzenColumn>
+                <RadzenColumn SizeMD="1">
+                    <RadzenButton Click=@Back Text="Projects" ButtonStyle="ButtonStyle.Light" />
+                </RadzenColumn>
+            </RadzenRow>
         </RadzenStack>
     </RadzenRow>
     <RadzenRow>
