--- a/src/Pages/Datasets/EditGroundTruthImage.razor
+++ b/src/Pages/Datasets/EditGroundTruthImage.razor
@@ -42,12 +42,22 @@
                 @if (!string.IsNullOrEmpty(Base64Image))
                 {
                     <div style="width:100%;height:500px; overflow:scroll;text-align:right;">
-                        <RadzenImage Path=@Base64Image />
+                        <img style="height:@ImageZoomLevel%; width:auto;" src=@Base64Image />
                     </div>
                 }
             </RadzenColumn>
             <RadzenColumn Size="12" SizeMD="4">
                 <RadzenStack Orientation="Orientation.Vertical">
+                    <h3>Zoom Level:</h3>
+                    <RadzenSelectBar TValue="int" Size="ButtonSize.Small" @bind-Value="@ImageZoomLevel">
+                        <Items>
+                            <RadzenSelectBarItem Value="100" Text="100 " />
+                            <RadzenSelectBarItem Value="150" Text="150" />
+                            <RadzenSelectBarItem Value="180" Text="180" />
+                            <RadzenSelectBarItem Value="200" Text="200" />
+                            <RadzenSelectBarItem Value="300" Text="300" />
+                        </Items>
+                    </RadzenSelectBar>
                     <RadzenButton Disabled=@(pageCounter == 0) ButtonStyle=ButtonStyle.Light Click=@Previous Size="ButtonSize.Small" Text="Previous" />
                     <RadzenButton Disabled=@(pageSize == 0 || pageCounter == pageSize - 1) ButtonStyle=ButtonStyle.Light Click=@Next Size="ButtonSize.Small" Text="Next" />
                     <RadzenCard>
@@ -75,10 +85,15 @@
             </RadzenColumn>
         </RadzenRow>
         <RadzenRow Gap="2rem" Class="rz-p-0 rz-p-lg-4">
-            <RadzenStack Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.Center" Gap="1rem" Class="rz-mt-8 rz-mb-4">
-                <RadzenButton Disabled=@IsSaving ButtonStyle="ButtonStyle.Primary" Click=@(async()=>await SaveAsync()) Size="ButtonSize.Large" Icon="save" Text="Save" />
-                <RadzenButton Disabled=@IsSaving ButtonStyle=ButtonStyle.Light Click=@Cancel Size="ButtonSize.Large" Text="Cancel" />
-            </RadzenStack>
+            <RadzenRow Style="width:100%">
+                <RadzenColumn SizeMD="10"></RadzenColumn>
+                <RadzenColumn SizeMD="2">
+                    <RadzenStack Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.Center" Gap="1rem" Class="rz-mt-8 rz-mb-4">
+                        <RadzenButton Disabled=@IsSaving ButtonStyle="ButtonStyle.Primary" Click=@(async()=>await SaveAsync()) Size="ButtonSize.Large" Icon="save" Text="Save" />
+                        <RadzenButton Disabled=@IsSaving ButtonStyle=ButtonStyle.Light Click=@Cancel Size="ButtonSize.Large" Text="Cancel" />
+                    </RadzenStack>
+                </RadzenColumn>
+            </RadzenRow>
         </RadzenRow>
     }
 </RadzenStack>
