--- a/src/Pages/Experiments/ExperimentRunIterationDetail.razor
+++ b/src/Pages/Experiments/ExperimentRunIterationDetail.razor
@@ -20,12 +20,22 @@
             @if (!string.IsNullOrEmpty(Base64Image))
             {
                 <div style="width:100%;height:500px; overflow:scroll;text-align:right;">
-                    <RadzenImage Path=@Base64Image />
+                    <img style="height:@ImageZoomLevel%; width:auto;" src=@Base64Image />
                 </div>
             }
         </RadzenColumn>
         <RadzenColumn Size="12" SizeMD="4">
-            <RadzenStack>
+            <RadzenStack Orientation="Orientation.Vertical">
+                <h3>Zoom Level:</h3>
+                <RadzenSelectBar TValue="int" Size="ButtonSize.Small" @bind-Value="@ImageZoomLevel">
+                    <Items>
+                        <RadzenSelectBarItem Value="100" Text="100 " />
+                        <RadzenSelectBarItem Value="150" Text="150" />
+                        <RadzenSelectBarItem Value="180" Text="180" />
+                        <RadzenSelectBarItem Value="200" Text="200" />
+                        <RadzenSelectBarItem Value="300" Text="300" />
+                    </Items>
+                </RadzenSelectBar>
                 @if (experimentRunResult is not null)
                 {
                     <div>
