--- a/src/Pages/Experiments/ExperimentRunDashboard.razor
+++ b/src/Pages/Experiments/ExperimentRunDashboard.razor
@@ -16,7 +16,7 @@
         <RadzenStack Orientation="Orientation.Horizontal" Gap="0.5rem" AlignItems="AlignItems.Center" class="rz-p-4 rz-mb-6 rz-border-radius-1" Style="border: var(--rz-grid-cell-border); width:100%;">
             <RadzenRow Style="width:100%">
                 <RadzenColumn SizeMD="11">
-                    <RadzenButton Click=@(args => RunAsync()) Text="New run" ButtonStyle="ButtonStyle.Primary" />
+                    <RadzenButton Click=@Run Text="New run" ButtonStyle="ButtonStyle.Primary" />
                     <RadzenButton Click=@(args => RefreshAsync()) Text="Refresh" ButtonStyle="ButtonStyle.Primary" />
                     <RadzenButton Click="@PerformComparisons" Text="Compare" ButtonStyle="ButtonStyle.Primary" Disabled="!model.Items.Any(x=>x.IsSelected)" />
                 </RadzenColumn>
